# sdl2_learning_gamedev2

./: CMakeLists.txt  README.md  saveFile.save  sdl2_game.sublime-project  sdl2_game.sublime-workspace
include/: AssetManager.hpp  ColiderComponent.hpp  ColliderComponent.hpp  Collision.hpp  Components.hpp  ECS.hpp  EnemyComponent.hpp  Game.hpp  GameObject.hpp  HealthComponent.hpp  InterractComponent.hpp  KeyboardController.hpp  Map.hpp  ProjectileComponent.hpp  SpriteComponent.hpp  TextureManager.hpp  TileComponent.hpp  TransformComponent.hpp  UILabel.hpp  Vector2D.hpp
res/: .mapt.swp  enemyMapping.map  kindamap.map  map0.map  map01.map  map02.map  map02.pyxel  map1.map  map2.map  mapx.map  testingMap.map
src/: AssetManager.cpp  Collision.cpp  ECS.cpp  Game.cpp  GameObject.cpp  Map.cpp  TextureManager.cpp  Vector2D.cpp  main.cpp
